--- a/index.html
+++ b/index.html
@@ -6,65 +6,96 @@
     <meta name="viewport" content="width=devicewidth, initial-scale=1.0">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-grid.min.css">
+
+    <!--Additional CSS must be placed after BootStrap CSS-->
+    <link rel="stylesheet"  href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans"/>
+    <link rel="stylesheet" href="css/styles.css">
+
+
     <title>Nucamp: A Better Way to Camp</title>
+</head>
 
 <body>
     <header>
-        <div>
-            <h1>Nucamp</h1>
-            <h2>A Better Way to Camp</h2>
-        </div>
+        <div class="container">
+            <div class="row row-content">
+                <div class="col">
+
+                    <h1>Nucamp</h1>
+                    <h2>A Better Way to Camp</h2>
+                </div>
+            </div>
     </header>
 
-    <div>
-        <h2>Discover and Review</h2>
-        <h3>Our Campsite</h3>
-        <p>Explore our database of curated <strong>campsites</strong> and leave your own review. <em>It's also a great
-                way to connect with family and friends!</em></p>
-    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4 order-sm-last col-md-3">
+                <h2 class="text-sm-end">Discover and Review</h2>
+            </div>
+            <div class="col">
+                <h3>Our Campsite</h3>
+                <p>Explore our database of curated <strong>campsites</strong> and leave your own review. <em>It's also a
+                        great
+                        way to connect with family and friends!</em></p>
+            </div>
+            </div>
 
-    <div>
-        <h2>Featured Campsite</h2>
-        <h3>React Lake Campground</h3>
-        <p>Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is
-            a favorite for fly fishers.</p>
-    </div>
+            <div class="row row-content align-items-center">
+                <div class="col-sm-4 col-md-3">
+                    <h2>Featured Campsite</h2>
+                </div>
+                <div class="col">
+                    <h3>React Lake Campground</h3>
+                    <p>Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine
+                        React Lake is
+                        a favorite for fly fishers.</p>
+                </div>
+            </div>
 
-    <div>
-        <h2>Our Community Partners</h2>
-        <h3>Bootstrap Outfitters</h3>
-        <p>Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
-
-    </div>
-
-    <footer>
-        <div>
-            <h5>Links </h5>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Sites</a></li>
-                <li><a href="#">Contact</a></li>
+            <div class="row row-content align-items-center">
+                <div class="col-sm-4 order-sm-last col-md-3">
+                    <h2 class="text-sm-end">Our Community Partners</h2>
+                </div>
+                <div class="col">
+                    <h3>Bootstrap Outfitters</h3>
+                    <p>Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
+                </div>
+            </div>
         </div>
-        <div>
-            <h5>Social</h5>
-            <a href="http://instagram.com/">Instagram</a>
-            <a href="http://facebook.com/">Facebook</a>
-            <a href="http://twitter.com/">Twitter</a>
-            <a href="http://youtube.com/">YouTube</a>
 
-        </div>
-        <div>
-            <h5>Subscribe</h5>
-            <p>Subscribe to our newsletter to receive the latest news and updates.</p>
-            <form>
-                <input type="email" placeholder="Email">
-                <button type="submit">Subscribe</button>
-            </form>
-        </div>
-    </footer>
-    <!-- Bootstrap JS plugins -->
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+        <footer>
+            <div class="container">
+                <div class="row row-content align-items-center">
+                    <div class="col-4 col-sm-2 offset-1">
+                        <h5>Links </h5>
+                        <ul class="list-unstyled">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Sites</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-6 col-sm-5 text-center">
+                        <h5>Social</h5>
+                        <a href="http://instagram.com/">Instagram</a>
+                        <a href="http://facebook.com/">Facebook</a>
+                        <a href="http://twitter.com/">Twitter</a>
+                        <a href="http://youtube.com/">YouTube</a>
+
+                    </div>
+                    <div class="col-sm-4">
+                        <h5>Subscribe</h5>
+                        <p>Subscribe to our newsletter to receive the latest news and updates.</p>
+                        <form>
+                            <input type="email" placeholder="Email">
+                            <button type="submit">Subscribe</button>
+                        </form>
+                    </div>
+                </div>
+                </div>
+        </footer>
+        <!-- Bootstrap JS plugins -->
+        <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
