--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=devicewidth, initial-scale=1.0">
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-grid.min.css">
 
     <!--Additional CSS must be placed after BootStrap CSS-->
-    <link rel="stylesheet"  href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
     <link rel="stylesheet" href="css/styles.css">
 
 
@@ -19,83 +22,134 @@
     <header>
         <div class="container">
             <div class="row row-content">
-                <div class="col">
-
+                <div class="col-4 col-sm-3 col-md-2 align-self-center">
+                    <img src="img/logo.png" class="img-fluid" />
+                </div>
+                <div class="col"> 
                     <h1>Nucamp</h1>
                     <h2>A Better Way to Camp</h2>
                 </div>
-            </div>
-    </header>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-4 order-sm-last col-md-3">
-                <h2 class="text-sm-end">Discover and Review</h2>
-            </div>
-            <div class="col">
-                <h3>Our Campsite</h3>
-                <p>Explore our database of curated <strong>campsites</strong> and leave your own review. <em>It's also a
-                        great
-                        way to connect with family and friends!</em></p>
-            </div>
-            </div>
-
-            <div class="row row-content align-items-center">
-                <div class="col-sm-4 col-md-3">
-                    <h2>Featured Campsite</h2>
-                </div>
-                <div class="col">
-                    <h3>React Lake Campground</h3>
-                    <p>Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine
-                        React Lake is
-                        a favorite for fly fishers.</p>
-                </div>
-            </div>
-
-            <div class="row row-content align-items-center">
-                <div class="col-sm-4 order-sm-last col-md-3">
-                    <h2 class="text-sm-end">Our Community Partners</h2>
-                </div>
-                <div class="col">
-                    <h3>Bootstrap Outfitters</h3>
-                    <p>Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
-                </div>
             </div>
         </div>
 
-        <footer>
-            <div class="container">
-                <div class="row row-content align-items-center">
-                    <div class="col-4 col-sm-2 offset-1">
-                        <h5>Links </h5>
-                        <ul class="list-unstyled">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Sites</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-6 col-sm-5 text-center">
-                        <h5>Social</h5>
-                        <a href="http://instagram.com/">Instagram</a>
-                        <a href="http://facebook.com/">Facebook</a>
-                        <a href="http://twitter.com/">Twitter</a>
-                        <a href="http://youtube.com/">YouTube</a>
+    </header>
+    <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+        <button class="navbar-toggler ml-auto" type="button" data-bs-toggle="collapse" data-bs-target="#nucampNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="nucampNavbar" >
+        <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="aboutus.html">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Sites</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+        </ul>
+    </div>
+    </nav>
 
-                    </div>
-                    <div class="col-sm-4">
-                        <h5>Subscribe</h5>
-                        <p>Subscribe to our newsletter to receive the latest news and updates.</p>
-                        <form>
-                            <input type="email" placeholder="Email">
-                            <button type="submit">Subscribe</button>
-                        </form>
+        <div class="container">
+            <div class="row row-content align-items-center">
+                <div class="col-sm-4 order-sm-last col-md-3">
+                    <h2 class="text-sm-end">Discover and Review</h2>
+                </div>
+            
+                <div class="col">
+                    <div class="d-flex">
+                        <img class="me-3 img-thumbnail" src="img/breadcrumb-trail-thumb.jpg" alt="Breadcrumb Trail" />
+                        <div class="align-self-center">
+                            <h3>Our Campsite</h3>
+                            <p class="d-none d-sm-block">Explore our database of curated <strong>campsites</strong> and
+                                leave your
+                                own review. <em>It's also a
+                                    great
+                                    way to connect with family and friends!</em></p>
+                        </div>
                     </div>
                 </div>
+            </div>
+
+                <div class="row row-content align-items-center">
+                    <div class="col-sm-4 col-md-3">
+                        <h2>Featured Campsite</h2>
+                    </div>
+                    <div class="col">
+                        <h3>React Lake Campground</h3>
+                        <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground
+                            on
+                            the
+                            shores of the pristine
+                            React Lake is
+                            a favorite for fly fishers.</p>
+                    </div>
                 </div>
-        </footer>
-        <!-- Bootstrap JS plugins -->
-        <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+
+                <div class="row row-content align-items-center">
+                    <div class="col-sm-4 order-sm-last col-md-3">
+                        <h2 class="text-sm-end">Our Community Partners</h2>
+                    </div>
+                    <div class="col">
+                        <div class="d-flex">
+                            <img class="me-3 img-thumbnail" src="img/bootstrap-thumb.png" alt="Bootstrap Outfitters" />
+                            <div class="align-self-center">
+                                <h3>Bootstrap Outfitters</h3>
+                                <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with the gear you need at
+                                    prices you
+                                    can't beat.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+                    <footer class="d-none d-sm-block">
+
+                        <div class="container">
+                            <div class="row row-content align-items-center">
+                                <div class="col-4 col-sm-2 offset-1">
+                                    <h5 class="d-none d-sm-block">Links </h5>
+                                    <ul class="list-unstyled">
+                                        <li class="nav-item"><a class="nav-link active" href="index.html"><i
+                                                    class="fa fa-home fa-lg"></i>
+                                                Home</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="aboutus.html"><i
+                                                    class="fa fa-info fa-lg"></i>
+                                                About</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#"><i
+                                                    class="fa fa-list fa-lg"></i>
+                                                Sites</a>
+                                        </li>
+                                        <li class="nav-item"><a class="nav-link" href="contactus.html"><i
+                                                    class="fa fa-address-card fa-lg"></i>
+                                                Contact</a></li>
+                                    </ul>
+                                </div>
+                                <div class="col-6 col-sm-5 text-center">
+                                    <h5>Social</h5>
+                                    <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i
+                                            class="fa fa-instagram"></i></a>
+                                    <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i
+                                            class="fa fa-facebook"></i></a>
+                                    <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i
+                                            class="fa fa-twitter"></i></a>
+                                    <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i
+                                            class="fa fa-youtube"></i></a>
+                                </div>
+
+                                <div class="col-sm-4">
+                                    <a role="button" class="btn btn-link" href="tel:+12065551234"><i
+                                            class="fa fa-phone"></i>
+                                        1-206-555-1234</a><br />
+                                    <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i
+                                            class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
+                                </div>
+                            </div>
+                        </div>
+
+                    </footer>
+                    <!-- Bootstrap JS plugins -->
+                    <script src="bootstrap.js"></script>
+                    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
