--- a/index.html
+++ b/index.html
@@ -79,14 +79,15 @@
             </div>
 
             <div class="col">
-                <div class="media">
+                <div class="d-flex">
                     <!--div class="media-body align-self-center"-->
-                    <img class="pull-right" src="img/react-lake-thumb.jpg" alt="React Lake" />
+                
                     <div class="align-self-center">
                         <h3>React Lake Campground</h3>
                         <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground
                             on the shores of the pristine React Lake is a favorite for fly fishers.</p>
                     </div>
+                    <img class="me-3 img-thumbnail" src="img/react-lake-thumb.jpg" alt="React Lake" />
                 </div>
             </div>
         </div>
