Building and Deployment: NPM Scripts

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 
-    <!--Additional CSS must be placed after BootStrap CSS-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+    <!--build:css css/main.css-->
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css" />
+    <!-- endbuild -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
 
 
     <title>Nucamp: A Better Way to Camp</title>
@@ -366,7 +368,8 @@
     </footer>
     <!-- Bootstrap JS plugins -->
     <script src="bootstrap.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <!--script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script-->
+    <script src="js/bootstrap.bundle.js"></script>
     <!--script>
         //Add custom Javascript for tooltips
         const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
