--- a/aboutus.html
+++ b/aboutus.html
@@ -6,11 +6,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
-    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
+     <!-- build:css css/main.css -->
+     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
+     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
+     <link rel="stylesheet" href="css/styles.css" />
+     <!-- endbuild -->
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <title>Nucamp: A Better Way To Camp</title>
 </head>
 
@@ -164,7 +166,7 @@
             </div>
         </div>
     </div>
-    
+
 
         <footer>
             <div class="container">
@@ -204,6 +206,7 @@
             </div>
         </footer>
         <script src="bootstrap.js"></script>
+        <script src="js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
